--- a/TheBookShop/TheBookShop.csproj
+++ b/TheBookShop/TheBookShop.csproj
@@ -46,14 +46,39 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="BookDB.cs" />
+    <Compile Include="CBook.cs" />
+    <Compile Include="frmFindBook.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="frmFindBook.Designer.cs">
+      <DependentUpon>frmFindBook.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmMain.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmMain.Designer.cs">
+      <DependentUpon>frmMain.cs</DependentUpon>
+    </Compile>
+    <Compile Include="frmNewBook.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmNewBook.Designer.cs">
+      <DependentUpon>frmNewBook.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SearchBookISBN.cs" />
+    <Compile Include="Validator.cs" />
+    <EmbeddedResource Include="frmFindBook.resx">
+      <DependentUpon>frmFindBook.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmMain.resx">
+      <DependentUpon>frmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmNewBook.resx">
+      <DependentUpon>frmNewBook.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
